objects/Voucher__c.object
<CustomObject>
    <fields>
        <fullName>Drive_Name__c</fullName>
        <label>Drive Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <label>Exam</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Voucher</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Drive_Name__c</columns>
        <columns>Exam__c</columns>
        <columns>Resource__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Voucher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>